<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarTrackApp</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //GPSFragment
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="time">Time</string>
    <string name="accuracy">Accuracy</string>
    <string name="throtle">Throtle</string>
    <string name="isturnedon">Car is turned on</string>
    <string name="fuelconsumption">Fuel Consumption</string>
    <string name="fueltank">Fuel Tank</string>
    <string name="millage">Millage</string>

</resources>
