<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.juris.cartrackapp.GPSFragment">

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_blank_fragment"
        android:layout_below="@+id/longitude_text"/>

    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/latitude"
        android:layout_below="@+id/longitude"/>

    <TextView
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_blank_fragment"
        android:layout_below="@+id/latitude_text"/>

    <TextView
        android:id="@+id/time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time"
        android:layout_below="@+id/latitude"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_blank_fragment"
        android:layout_below="@+id/time_text"/>

    <TextView
        android:id="@+id/altitude_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/altitude"
        android:layout_below="@+id/time"/>

    <TextView
        android:id="@+id/altitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_blank_fragment"
        android:layout_below="@+id/altitude_text"/>

    <TextView
        android:id="@+id/accuracy_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/accuracy"
        android:layout_below="@+id/altitude"/>

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_blank_fragment"
        android:layout_below="@+id/accuracy_text"/>

    <TextView
        android:id="@+id/millage_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/millage"
        android:layout_below="@+id/accuracy"/>

    <TextView
        android:id="@+id/millage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_blank_fragment"
        android:layout_below="@+id/millage_text"/>

    <TextView
        android:id="@+id/fueltank_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fueltank"
        android:layout_below="@+id/millage"/>

    <TextView
        android:id="@+id/fueltank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_blank_fragment"
        android:layout_below="@+id/fueltank_text"/>

    <TextView
        android:id="@+id/isturnedon_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/isturnedon"
        android:layout_below="@+id/fueltank"/>

    <TextView
        android:id="@+id/isturnedon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_blank_fragment"
        android:layout_below="@+id/isturnedon_text"/>

    <TextView
        android:id="@+id/throtle_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/throtle"
        android:layout_below="@+id/isturnedon"/>

    <TextView
        android:id="@+id/throtle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_blank_fragment"
        android:layout_below="@+id/throtle_text"/>

    <TextView
        android:id="@+id/fuelconsumption_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fuelconsumption"
        android:layout_below="@+id/throtle"/>

    <TextView
        android:id="@+id/fuelconsumption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_blank_fragment"
        android:layout_below="@+id/fuelconsumption_text"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TURN_ON"
        android:layout_below="@+id/fuelconsumption"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DISCOVERABLE"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button1"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TURN_OFF"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
</ScrollView>